playground/GKE_sandpit/hello-world-preshared-cert/configurations/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hello-world
    ingress.gcp.kubernetes.io/pre-shared-cert: orphea-preshared-cert
    kubernetes.io/ingress.allow-http: "false"
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: hello-world.orphea.io
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-service-1
            port:
              number: 60000
      - path: /v2
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-service-2
            port:
              number: 80
